# HW-GHA

./: .gitignore  CMakeLists.txt  README.md  ci-cd-local.yml
.github/workflows/: ci-cd.yml
src/: main.cpp
tests/: test_main.cpp
